--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
     background: var(--main__green)
 }
 
-
 html, body {
     position:fixed;
     top:0;
@@ -19,6 +18,8 @@ html, body {
     right:0;
     text-rendering: optimizeLegibility;
     cursor: cell;
+    height: 200vh;
+    background: linear-gradient(180deg, #ffffff 0%,  #fbf2e7 85%);
 
 }
 
@@ -456,6 +457,37 @@ img{
     width: 18vw;
     height: 30vh;
     object-fit: contain;
+}
+
+.__img{
+    border: none;
+}
+
+.__img:hover{
+    transition-duration: 0.5s;
+    border: dotted 1px #00FF67;
+}
+
+.imageViewer__modal{
+    position: absolute;
+    background: linear-gradient(180deg, var(--main__green) 0%,  var(--fluo__green) 100%);
+
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+
+    top: 10vh;
+    bottom: 120vh;
+    left: 20vw;
+    right: 20vw;
+
+    z-index: 100000;
+}
+
+.img__large{
+    width:100%;
+    height: 100%;
+    object-fit: contain;
+    opacity: 1;
 }
 
 .hexBox{
