--- a/src/index.css
+++ b/src/index.css
@@ -487,6 +487,10 @@ img{
     border: dotted 1px #00FF67;
 }
 
+.imageViewer__modal--box {
+    display: grid;
+}
+
 .imageViewer__modal{
     position: absolute;
     background: linear-gradient(180deg, var(--main__green) 0%,  var(--fluo__green) 100%);
@@ -500,6 +504,24 @@ img{
     right: 20vw;
 
     z-index: 100000;
+}
+
+.imageViewer__modal__gallery {
+    position: relative;
+    background: linear-gradient(180deg, var(--main__green) 0%,  var(--fluo__green) 100%);
+
+    display: grid;
+    grid-template-columns: repeat(5, 12vw);
+
+    top: 90vh;
+    bottom: 5vh;
+    left: 20vw;
+    right: 20vw;
+    
+}
+
+.imageViewer__modal__gallery-image {
+    border: solid 2px var(--fluo__green)
 }
 
 .imageViewer__modal__title{
