--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,12 @@ a {
     text-decoration: underline;
 }
 
+.scrollable{
+    overflow: scroll;
+    display: grid;
+    height: 600px;
+}
+
 .refText{
     text-decoration: underline;
     transition: color 300ms;
