--- a/src/index.css
+++ b/src/index.css
@@ -524,6 +524,8 @@ imageViewer__modal-main {
     display: grid;
     grid-template-columns: 10% 80% 10%;
 
+    height: 75vh;
+
     top: 10vh;
     bottom: 120vh;
     left: 20vw;
@@ -589,7 +591,7 @@ imageViewer__modal-main {
 
 .img__large{
     width:100%;
-    height: 100%;
+    height: 75vh;
     object-fit: contain;
     opacity: 1;
 }
