--- a/src/index.css
+++ b/src/index.css
@@ -239,6 +239,14 @@ a {
 .box{
     position: relative;
     width: 400px;
+    font-size: 15px;
+} @media (max-width: 1224px) {
+    .box {
+        width: 90%;
+        padding: 5%;
+        font-size: 25px;
+        text-align: justify;
+    }
 }
 
 .center{
