taking RESPONSIBILITY __ approach #1 - __responisve__ design for model1.

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,17 @@ h2 {
     }
 }
 
+.subHeader__text {
+    font-size: 20px;
+    color: var(--main__green);
+    font-family: lineal;
+} @media (max-width: 1224px) {
+    .subHeader__text{
+        font-size: 50px;
+    }
+
+}
+
 .quote{
     border-left: 3px solid black;
     margin-left: 5%;
