__BUILT__ init login auth MODELS_FROM_THE_PAST_FOR_THE_FUTURE-77

--- a/src/index.css
+++ b/src/index.css
@@ -768,6 +768,12 @@ imageViewer__modal-main {
     border-top: black solid 2px;
 }
 
+.login-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .notDraggable {
     user-drag: none;
     -webkit-user-drag: none;
