--- a/src/index.css
+++ b/src/index.css
@@ -395,8 +395,9 @@ button{
     border: 2px solid black;
     border-left: none;
     text-align: center;
-    color: var(--main__green);
+    color: black;
     font-size: 20px;
+    padding-top: 16px;
 }
 
 .rowScroll {
