--- a/src/index.css
+++ b/src/index.css
@@ -120,6 +120,33 @@ h3 {
     font-family: "sligoil-micro", sans-serif;
 }
 
+.glossBox{
+    transform: rotate(-15deg);
+    height: 70vh;
+    white-space: nowrap;
+}
+.glossBox:hover{
+    transform: rotate(-5deg);
+    background: papayawhip;
+    transition: transform 0.1s ease-in, transform 1s ease-out;
+    transition: background 1s ease-in;
+}
+
+.glossTitles{
+    font-family: Lineal;
+    font-size: 50px;
+    transform: rotate(90deg);
+    color: var(--yellow_ish);
+    padding-left: 50%;
+}
+
+.glossDefinitionBox{
+    background: papayawhip;
+    position: relative;
+    top: -20vh;
+    height: 60vh;
+}
+
 .font-main {
     font-family: "sligoil-micro", sans-serif;
 }
@@ -884,6 +911,11 @@ imageViewer__modal-main {
     grid-template-columns: repeat(8, 12%);
 }
 
+.grid--even_10 {
+    display:grid;
+    grid-template-columns: repeat(10, 10%);
+}
+
 .border_box {
-    border: 2px black solid;
+    border: 2px solid;
 }
