--- a/src/index.css
+++ b/src/index.css
@@ -427,8 +427,6 @@ a {
     width: 10vw;
 }
 
-
-
 .descText {
     font-family: "sligoil-micro", sans-serif;
     font-size: 15px;
@@ -440,6 +438,15 @@ a {
 
 text {
     position: relative;
+}
+
+.bm-burger-button {
+    position: fixed;
+    width: 30px;
+    height: 30px;
+    left: 36px;
+    top: 36px;
+    background-color: blue;
 }
 
 button{
